# StereoKit-rust-gstreamer

./: .gitignore  Cargo.toml  build.gradle  build.rs  gradle.properties  logcat.cmd  readme.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/sterokit/rust_binding/stereokit_gst/: MainActivity.java
jni/: Android.mk
src/: a_stepper.rs  lib.rs  main.rs  video1.rs  video2.rs
