[package]
name = "stereokit_rust_gstreamer"
version = "0.1.0"
edition = "2021"
description = "My stereokit VR program"
keywords = ["stereokit", "XR", "VR", "AR", "sys"]
license = "MIT"
repository = "https://github.com/mvvvv/StereoKit-rust-gstreamer"
readme = "README.md"

[lib]
crate-type = ["lib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
stereokit-rust = { path = "../stereokit-rust", features = ["build-dynamic-openxr"] }
winit = { version = "0.30", features = [ "android-native-activity" ] }
anyhow = {version = "1.0"}
gstreamer = {version = "0.23"}
gstreamer-sys = {version = "0.23"}
gstreamer-app = {version = "0.23"}
gstreamer-audio = {version = "0.23"}
gstreamer-video = {version = "0.23"}
byte-slice-cast = "1"

[target.'cfg(target_os = "android")'.dependencies]
log = "0.4"
android_logger = "0.14"
ndk-context = "0.1.1"
ndk = "0.9.0"
ndk-sys = "0.6"
jni = "0.21"

